[gd_scene load_steps=3 format=1]

[ext_resource path="res://assets/screenprototype.png" type="Texture" id=1]
[ext_resource path="res://GDscript/screen.gd" type="Script" id=2]


[node name="screen" type="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1152.0
margin/bottom = 832.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="confirm" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 992.0
margin/top = 64.0
margin/right = 1120.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="deny" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 992.0
margin/top = 224.0
margin/right = 1120.0
margin/bottom = 320.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="incr" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 992.0
margin/top = 384.0
margin/right = 1120.0
margin/bottom = 480.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="decr" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 992.0
margin/top = 512.0
margin/right = 1120.0
margin/bottom = 608.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="restart" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 992.0
margin/top = 672.0
margin/right = 1120.0
margin/bottom = 768.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="speed" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 800.0
margin/top = 704.0
margin/right = 880.0
margin/bottom = 736.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I say things"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="msg" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 128.0
margin/top = 320.0
margin/right = 512.0
margin/bottom = 480.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Here\'s a msg"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="confirm" to="." method="_on_confirm_pressed"]

[connection signal="pressed" from="deny" to="." method="_on_deny_pressed"]

[connection signal="pressed" from="incr" to="." method="_on_incr_pressed"]

[connection signal="pressed" from="decr" to="." method="_on_decr_pressed"]

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]


